welcome.lessons.welcome.array.array667.Array667.scala.error
array667:20: error: type mismatch;
 found   : Boolean
 required: Int
	return ok;
               ^